--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1594,6 +1594,9 @@ function updateSelectedDaysDisplay() {
             button.classList.remove("selected");
         }
     });
+    specificDaysInput.value = selectedDays.join(",");
+    console.log("Updated selectedDays:", selectedDays); // Debug
+    console.log("specificDaysInput.value:", specificDaysInput.value); // Debug
 }
 
 // Add click event listeners to day buttons
@@ -1603,14 +1606,15 @@ document.querySelectorAll("#specificDaysButtons .day-btn").forEach(button => {
         const fullDay = dayMapping[shortDay];
         if (selectedDays.includes(fullDay)) {
             selectedDays = selectedDays.filter(day => day !== fullDay);
-            button.classList.remove("selected");
         } else {
             selectedDays.push(fullDay);
-            button.classList.add("selected");
         }
-        specificDaysInput.value = selectedDays.join(",");
+        updateSelectedDaysDisplay(); // Update UI and input
     });
 });
+
+// Initialize display on load
+updateSelectedDaysDisplay();
 
 
 
@@ -1731,8 +1735,11 @@ function getDatesInRange(start, end) {
     return dates;
 }
 
+
+
 function updateSelectedDatesDisplay() {
     selectedDatesContainer.innerHTML = "";
+    console.log("Selected Dates (raw):", selectedDates); // Debug
     if (selectedDates.length === 0) {
         specificDatesInput.value = "";
         const placeholder = document.createElement("span");
@@ -1741,9 +1748,13 @@ function updateSelectedDatesDisplay() {
         placeholder.style.fontSize = "14px";
         selectedDatesContainer.appendChild(placeholder);
     } else {
-        specificDatesInput.value = selectedDates.map(date =>
-            date.toISOString().split("T")[0]
-        ).join(",");
+        specificDatesInput.value = selectedDates.map(date => {
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const day = String(date.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
+        }).join(",");
+        console.log("specificDatesInput.value:", specificDatesInput.value); // Debug
         selectedDates.forEach(date => {
             const chip = document.createElement("div");
             chip.className = "date-chip";
@@ -1763,6 +1774,10 @@ function updateSelectedDatesDisplay() {
         });
     }
 }
+
+
+
+
 
 specificDatesButton.addEventListener("click", () => {
     showModal(specificDatesModal);
@@ -1901,10 +1916,7 @@ window.addEventListener("click", (e) => {
     let timesPerWeek = parseInt(document.getElementById("timesPerWeekInput").value) || null;
     let timesPerMonth = parseInt(document.getElementById("timesPerMonthInput").value) || null;
     const specificDates = document.getElementById("specificDatesInput").value;
-    const specificDays = document.getElementById("specificDaysInput").value
-        .split(",")
-        .map(d => d.trim())
-        .filter(d => d);
+    const specificDays = dateMode === "specific-days" ? selectedDays : [];
 
     if (!title) {
         alert("Task title is required!");
@@ -1922,9 +1934,34 @@ window.addEventListener("click", (e) => {
     let dateValue = "";
     if (dateMode === "from-to" || dateMode === "specific-days") {
         dateValue = dateFrom;
-        if (dateTo && dateDisplayTo.style.display !== "none") {
+        if (dateTo && dateTo !== dateFrom && dateDisplayTo.style.display !== "none") {
             dateValue += ` to ${dateTo}`;
         }
+    } else if (dateMode === "specific-dates" && specificDates) {
+        const dates = specificDates.split(",").map(date => new Date(date.trim()));
+        const validDates = dates.filter(date => !isNaN(date.getTime()));
+        if (validDates.length > 0) {
+            const minDate = new Date(Math.min(...validDates));
+            const maxDate = new Date(Math.max(...validDates));
+            const formatDate = (date) => {
+                return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
+            };
+            dateValue = `${formatDate(minDate)} to ${formatDate(maxDate)}`;
+        } else {
+            const today = new Date();
+            const farFuture = new Date(3000, 0, 1);
+            const formatDate = (date) => {
+                return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
+            };
+            dateValue = `${formatDate(today)} to ${formatDate(farFuture)}`;
+        }
+    } else {
+        const today = new Date();
+        const farFuture = new Date(3000, 0, 1);
+        const formatDate = (date) => {
+            return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
+        };
+        dateValue = `${formatDate(today)} to ${formatDate(farFuture)}`;
     }
 
     const currentAdmin = localStorage.getItem("currentAdminEmail");
@@ -1944,8 +1981,10 @@ window.addEventListener("click", (e) => {
         timesPerWeek,
         timesPerMonth,
         specificDates: dateMode === "specific-dates" ? specificDates : "",
-        specificDays: dateMode === "specific-days" ? specificDays : []
+        specificDays
     };
+
+    console.log("Task being saved:", JSON.stringify(task, null, 2)); // Debug
 
     const editTask = JSON.parse(localStorage.getItem("familyApp_editTask"));
 
@@ -1989,8 +2028,6 @@ window.addEventListener("click", (e) => {
         alert(`Failed to save task: ${error.message}`);
     }
 });
-
-
 
 
 
